--- a/지렁이 게임/지렁이 게임.vcxproj
+++ b/지렁이 게임/지렁이 게임.vcxproj
@@ -138,7 +138,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="myfunction.cpp" />
     <ClCompile Include="지렁이게임.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Header.h" />
+    <ClInclude Include="myfunction.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
