--- a/지렁이 게임/지렁이 게임.vcxproj.filters
+++ b/지렁이 게임/지렁이 게임.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="지렁이게임.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="myfunction.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Header.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="myfunction.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
